<resources>
    <string name="app_name">IMEI Generator (Lite)</string>

-->
    <string name="banner_ad_unit_id_main" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="main_activity_interstitial_adunit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_suggestions">Suggest us what went wrong and we will work on it!</string>
    <string name="these_imeis_were">\n\nIMEI(s) were Generated by IMEI Generator - bit.ly/IMEI-Generator</string>
    <string name="generate">Generate</string>
    <string name="imei_gen">Generator</string>
    <string name="input_imei_number_14_or_15_digits">Enter 14 or 15 Digits</string>
    <string name="my_imei">My IMEI</string>
    <string name="clear">Clear</string>
    <string name="cleared">Cleared</string>
    <string name="analyze">Analyze</string>
    <string name="type_allocation_code">Type Allocation Code</string>
    <string name="reporting_body_identifier">Reporting Body Identifier</string>
    <string name="mobile_equipment_type">Mobile Equipment Type</string>
    <string name="final_assembly_code">Final Assembly Code</string>
    <string name="serial_number">Serial Number</string>
    <string name="check_digit">Check Digit</string>
    <string name="luhn_digit">Luhn Digit</string>
    <string name="empty">Empty!</string>
    <string name="generated_imei">Generated IMEIs without Duplicates</string>
    <string name="imei_copied">IMEI Copied!</string>
    <string name="generate_imei_txt">Generated IMEIs.txt</string>
    <string name="saved_in_sd_card">Saved in Memory Card</string>
    <string name="checkdigitcorrect">✓✓ Check Digit is Correct ✓✓\nIMEI Looks Valid</string>
    <string name="checkdigit_not_correct">✖✖ Check Digit NOT Correct ✖✖</string>
    <string name="fullIMEI">Full IMEI</string>
    <string name="btw_8_12_digits">Enter between 8  &#8211; 12 Digits</string>
    <string name="clear_all">Clear All</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="copy_all">Copy All</string>
    <string name="phone_imei">Phone IMEI</string>
    <string name="analyzer">Analyzer</string>
    <string name="rate_app">Rate App on Playstore</string>
    <string name="share_via">Share Via</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="one_month">One Month</string>
    <string name="permanent">Permanent</string>
    <string name="cant_find_play">Could not find PlayStore on this device</string>
    <string name="cant_find_eng_mode">Cannot find EngineerMode App</string>
    <string name="cant_find_mtk">Cannot find EngineerMode App - Mediatek chipset is mandatory and stock ROM must be installed</string>
    <string name="cantfind_sam_eng_mode">Cannot find Samsung EngineerMode App</string>
    <string name="please_support_us">Please Support Us</string>
    <string name="check_imei">IMEI Checker</string>
    <string name="data_too_big">The Data is too large, try saving with the \"Save\" button</string>
    <string name="connection_error">Connection Error</string>
    <string name="tab4_text">I spent many hours trying to make this App for you! Would you like to give me some Encouragement?</string>
    <string name="hello">Hello</string>
    <string name="check" translatable="false">✓✓</string>
    <string name="cross" translatable="false">✖✖</string>
    <string name="enter_imei_15_digits">Enter IMEI (15 digits)</string>
    <string name="mistakes_report">Mistakes Report</string>
    <string name="want2transalate">I Want to Transalate</string>
    <string name="language">Language</string>
    <string name="imei_generator">IMEI Generator Pro</string>
    <string name="app_extractor">App Extractor</string>
    <string name="other_apps">Other Apps</string>
    <string name="status_saver">Status Saver For WhatsApp</string>
    <string name="root_checker">Root Checker</string>
    <string name="dev_email">edgedeveloper007@gmail.com</string>
    <string name="mutual_fund_calculator">Mutual Fund Calculator</string>
    <string name="playstore_not_found">Couldn\'t find PlayStore on this device</string>
    <string name="contact_us">Contact Us</string>
    <string name="join_telegram_group">Join Telegram Group</string>
    <string name="join_us_on_facebook">Join Us on Facebook</string>
</resources>
